fixed alignment of footer/copyright elements

--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -135,10 +135,17 @@ a {
     font-size: 16px;
     border: none;
     border-radius: 10rem;
+
+    &:focus,
+    &:active {
+        outline: none;
+        box-shadow: none;
+    }
 }
 
-.btn:focus,
-.btn:active {
+/* INPUTS */
+.form-control:focus,
+.form-control:active {
     outline: none;
     box-shadow: none;
 }
@@ -151,8 +158,8 @@ a {
     border-color: $color5;
 }
 
-/* FONT AWESOME */
-i {
+/* CONTACT ICONS */
+.custom-align-middle {
     vertical-align: middle;
 }
 
@@ -169,5 +176,17 @@ i {
     }
     .social {
         display: none;
+    }
+    .custom-flex-between {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    // Medium Width for Bootstrap
+    .custom-flex-between {
+        display: flex;
+        justify-content: space-between;
     }
 }
